feat: added delete video endpoint
